force-app/main/default/objects/Daily_Sales_Summary__c/Daily_Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Daily Sales Summary</label>
    <nameField>
        <label>Daily Sales Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Sales Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>