force-app/main/default/objects/Daily_Sales_Summary__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>CASE(WEEKDAY(Date__c), 1, "Sunday", 2, "Monday", 3, "Tuesday", 4, "Wednesday", 5, "Thursday", 6, "Friday", 7, "Saturday", "Unknown")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>