force-app/main/default/objects/Daily_Sales_Summary__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>IF(Total_Revenue__c > 0, (Total_Revenue__c - Total_Ingredient_Cost__c) / Total_Revenue__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>