force-app/main/default/objects/Daily_Sales_Summary__c/fields/Has_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Has_Recipe__c</fullName>
    <formula>NOT(ISBLANK(Product__r.Active_Recipe__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Recipe</label>
    <type>Checkbox</type>
</CustomField>