force-app/main/default/objects/Daily_Sales_Summary__c/fields/Is_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Holiday</label>
    <type>Checkbox</type>
</CustomField>