force-app/main/default/objects/Daily_Sales_Summary__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Daily Sales Summaries</relationshipLabel>
    <relationshipName>Daily_Sales_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>