force-app/main/default/objects/Daily_Sales_Summary__c/fields/Total_Ingredient_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Ingredient_Cost__c</fullName>
    <label>Total Ingredient Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>